--- a/templates/index.html
+++ b/templates/index.html
@@ -3,38 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minhas Finanças</title>
+    <title>Minhas finanças</title>
 
-    <!-- Arquivo de estilização  -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> 
+    
+    <!-- Importando o meu estilo 
+    <link rel="stylesheet" href="styles/style.css">
 
-    <!-- Biblioteca javascript -->
-    <script src="{{ url_for('static', filename='js/cru.js') }}"></script>
+     Importando o estilo da transação 
+     <link rel="stylesheet" href="styles/transacao.css">
+    -->
 
 </head>
 <body>
+    <!-- Importando o bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
     <header>
-        <h1>
-            Minhas Finanças
-        </h1>
-        <nav>
-            <ul>
-<!--            --><li><a>Link1</a></li><!-- 
-                --><li><a>Link2</a></li><!-- 
-                --><li><a>Link3</a></li><!-- 
-                --><li><a>Link4</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+
+
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Transação</a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Categoria</a>
+                  </li>
+
+
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
-    <main>
+    <main class="container">
+        <div c-container="{{ url_for('transactions') }}">
 
-
-    <div c-container="{{ url_for('transaction.cadastrar_transacao') }}"></div>
-
-
-    <div></div>
-
-
+        </div>
     </main>
 </body>
 </html>
