--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -1,6 +1,6 @@
 <tr scope="row">
-    <td>{{ transaction.categoria }}</td>
-    <td>{{ transaction.descricao }}</td>
-    <td>{{ transaction.valor }}</td>
-    <td>{{ transaction.data }}</td>
+    <td>{{ transaction["categoria"] }}</td>
+    <td>{{ transaction["descricao"] }}</td>
+    <td>{{ transaction["valor"] }}</td>
+    <td>{{ transaction["momento"] }}</td>
 </tr>
