--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -10,8 +10,8 @@
     <tbody>
         {% for transaction in transactions %}
 
-            {% extends "transaction.html" %}
+            {% include "transaction.html" %}
 
-        {% end for %}
+        {% endfor %}
     </tbody>
-  </table>
+</table>
