--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,10 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a 
+              class="navbar-brand"
+              c-get="{{ url_for('transaction.index') }}"
+              c-target="#main">Navbar</a>
 
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 
@@ -34,11 +37,18 @@
 
 
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Transação</a>
+                    <a 
+                    class="nav-link active" 
+                    aria-current="page" 
+                    c-get="{{ url_for('transaction.cadastrar_transacao') }}"
+                    c-target="#main">Transação</a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Categoria</a>
+                    <a 
+                    class="nav-link" 
+                    c-get="{{ url_for('transaction.cadastrar_categoria') }}"
+                    c-target="#main">Categoria</a>
                   </li>
 
 
@@ -48,9 +58,14 @@
           </nav>
     </header>
     <main class="container">
-        <div c-container="{{ url_for('transactions') }}">
+        <div c-container="{{ url_for('transaction.index') }}" id="main">
 
         </div>
     </main>
+
+
+    <!-- Importando o cru.js -->
+    <script src="{{ url_for('static', filename='js/cru.js') }}"></script>
+
 </body>
 </html>
