Adicionando novas transações e categorias

--- a/templates/cadastrar_categoria.html
+++ b/templates/cadastrar_categoria.html
@@ -6,7 +6,7 @@ method="post">
     
     <div class="mb-3">
         <label for="icategoria" class="form-label">Categoria</label>
-        <input type="text" class="form-control" id="icategoria" name="categoria" aria-describedby="dica">
+        <input type="text" class="form-control" id="icategoria" name="categoria" aria-describedby="dica" required>
     <div id="dica" class="form-text">A categoria deve ser simples e objetiva</div>
     </div>
 
