Correção de alguns bugs

--- a/templates/categoria.html
+++ b/templates/categoria.html
@@ -1,1 +1,1 @@
-<option value="{{ categoria }}">{{ categoria }}</option>
+<option value="{{ categoria['categoria'] }}">{{ categoria['categoria'] }}</option>
