--- a/templates/cadastrar_categoria.html
+++ b/templates/cadastrar_categoria.html
@@ -12,3 +12,26 @@ method="post">
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th>
+                Id
+            </th>
+            <th>
+                Categoria
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th>
+
+            </th>
+            <td>
+                
+            </td>
+        </tr>
+    </tbody>
+</table>
