Alterando o nome de alguns arquivos .html

--- a/templates/categoria.html
+++ b/templates/categoria.html
@@ -1,1 +1,8 @@
-<option value="{{ categoria['categoria'] }}">{{ categoria['categoria'] }}</option>
+<tr>
+    <th>
+        {{ categoria["id"]}}
+    </th>
+    <td>
+        {{ categoria["categoria"] }}
+    </td>
+</tr>
