--- a/templates/form_categoria.html
+++ b/templates/form_categoria.html
@@ -1,6 +1,6 @@
 <form
 class="c-form"
-c-target="#main"
+c-append="#tbody-categoria"
 action="{{ url_for('transaction.cadastrar_categoria')}}" 
 method="post">
     
@@ -12,26 +12,3 @@ method="post">
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th>
-                Id
-            </th>
-            <th>
-                Categoria
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th>
-
-            </th>
-            <td>
-                
-            </td>
-        </tr>
-    </tbody>
-</table>
