Dividindo o arquivo transactions.py
Existia algumas partes que não faziam sentido nele, como categoria, por isso eu criei um arquivo separado só para lidar com as requisições sobre categoria.

--- a/templates/form_categoria.html
+++ b/templates/form_categoria.html
@@ -1,7 +1,7 @@
 <form
 class="c-form"
-c-append="#tbody-categoria"
-action="{{ url_for('transaction.cadastrar_categoria')}}" 
+c-target="#main"
+action="{{ url_for('categoria.cadastrar_categoria')}}" 
 method="post">
     
     <div class="mb-3">
