--- a/templates/index.html
+++ b/templates/index.html
@@ -21,41 +21,66 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a 
-              class="navbar-brand"
-              c-get="{{ url_for('transaction.index') }}"
-              c-target="#main">Navbar</a>
-
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
 
 
-                  <li class="nav-item">
-                    <a 
-                    class="nav-link active" 
-                    aria-current="page" 
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand"
+          c-get="{{ url_for('transaction.index') }}"
+          c-target="#main">Tabela</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+
+          <div class=" collapse navbar-collapse" id="navbarNavDarkDropdown">
+
+
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Transação 
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                  <li><a 
+                    class="dropdown-item" 
                     c-get="{{ url_for('transaction.cadastrar_transacao') }}"
-                    c-target="#main">Transação</a>
-                  </li>
-
-                  <li class="nav-item">
-                    <a 
-                    class="nav-link" 
-                    c-get="{{ url_for('transaction.cadastrar_categoria') }}"
-                    c-target="#main">Categoria</a>
-                  </li>
-
-
+                    c-target="#main">Cadastrar Transação</a></li>
+                  <li><a 
+                    class="dropdown-item"
+                    c-get="{{ url_for('transaction.cadastrar_transacao') }}"
+                    c-target="#main">Modificar Transação</a></li>
                 </ul>
-              </div>
-            </div>
-          </nav>
+              </li>
+            </ul>
+
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Categoria
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                  <li><a 
+                    class="dropdown-item" 
+                    c-get="{{ url_for('categoria.cadastrar_categoria') }}"
+                    c-target="#main">Cadastrar Categoria</a></li>
+                  <li><a class="dropdown-item"
+                    c-get="{{ url_for('categoria.cadastrar_categoria') }}"
+                    c-target="#main">Modificar Categoria</a></li>
+                </ul>
+              </li>
+            </ul>
+
+
+          </div>
+
+
+        </div>
+
+
+      </nav>
+
+
     </header>
     <main class="container">
         <div c-container="{{ url_for('transaction.index') }}" id="main">
