Implementando o PUT and DELELET das categorias.

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
                     c-get="{{ url_for('categoria.cadastrar_categoria') }}"
                     c-target="#main">Cadastrar Categoria</a></li>
                   <li><a class="dropdown-item"
-                    c-get="{{ url_for('categoria.cadastrar_categoria') }}"
+                    c-get="{{ url_for('categoria.categorias') }}"
                     c-target="#main">Modificar Categoria</a></li>
                 </ul>
               </li>
