--- a/templates/categorias.html
+++ b/templates/categorias.html
@@ -63,7 +63,7 @@
                         data-bs-toggle="tooltip" 
                         data-bs-placement="bottom" 
                         title="Se você alterar a categoria todas as transações seram alteradas também."
-                        c-put="{{ url_for('categoria.modify', categoria_id=categoria['id']) }}"
+                        c-get="{{ url_for('categoria.modify', categoria_id=categoria['id']) }}"
                         c-target="#main">
                             Modificar
                         </button>
