--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                     c-target="#main">Cadastrar Transação</a></li>
                   <li><a 
                     class="dropdown-item"
-                    c-get="{{ url_for('transaction.cadastrar_transacao') }}"
+                    c-get="{{ url_for('transaction.edit_transactions') }}"
                     c-target="#main">Modificar Transação</a></li>
                 </ul>
               </li>
